# airflow-k8s-executor-example

./: .gitignore  .pre-commit-config.yaml  README.md  commit-msg.py  create_dag.py  original-values.yaml  pre-commit.sh  pyproject.toml  setup.cfg  values.yaml
dags/: catchup.py  child.py  concurrency.py  dag_example.py  depends_on_past.py  max_active_runs.py  parent.py  teams_alert.py  wait_for_downstream.py
dags/hooks/: ms_teams_hook.py
templates/: dag.tpl  dag_with_dependency.tpl
